# test

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  main.py  pyproject.toml  Декомпозиция.xlsx
alembic/: env.py
app/: alembic.ini  main.py
app/alembic/: env.py
app/alembic/versions/: 20251210000100_init.py
app/api/: router.py
app/config/: settings.py
app/db/: asyncSession.py
app/model/: models.py
app/repo/: admin.py  bitrix.py  form.py  uow.py  user.py
app/schema/: __init__.py  admin.py  bitrix.py  form.py  user.py
app/service/: ai.py  errors.py  service.py
app/templates/: form.html
app/tests/: conftest.py  test_service.py  test_uow.py
app/utils/: bitrix.py
app/utils/ai/: engine.py  filter.py  llm.py  sheets.py
bot/: README.md  api_client.py  config.py  keyboards.py  main.py
bot/handlers/: admin.py  ai.py  chat_member.py  form.py  start.py
docker/: Dockerfile  Dockerfile.bot  docker-compose.yml
